--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-konva": "^3.0.2"
   },
   "devDependencies": {
+    "@types/node": "^20.8.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
